	* client/client.c, client/player.c, client/player.h: Fixed reconnect
	bug.
	* common/network.c, server/gnocatan-server.c: Fixed broken pipe bug.

2003-10-17  Bas Wijnen <b.wijnen@phys.rug.nl>
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.
	* server/gnocatan-server-gtk.c: Improved code.
	* server/gnocatan-server.c: Ignored broken pipe.

2003-10-15  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/trade.c: Fixed reconnect bug.
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.
	* server/conquest+ports.game, server/conquest.game,
	server/four-islands.game, server/seafarers-gold.game,
	server/seafarers.game, server/x.game: Added pirate.

2003-10-15  Bas Wijnen <b.wijnen@phys.rug.nl>
	* README: Changed version number.
	* client/player.c: bugfix.
	* po/de.po, po/es.po, po/gnocatan.pot: updated.

2003-10-15  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c: Use new disconnect protocol.
	* client/build.c: Fixed ship move undo bug.
	* server/gold.c, server/robber.c, server/trade.c: Fixed viewer bugs.
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.

2003-10-13  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/client.c, server/pregame.c: Added pirate position to
	reconnect info.
	* common/game.c, server/player.c, server/pregame.c, server/server.h:
	Bugfixes.
	* common/game.c, server/player.c, server/pregame.c: Bugfixes.

2003-10-12  Roland Clobus <rclobus@bigfoot.com>
	* client/admin_gtk.c, client/connect.c, common/network.c,
	common/network.h, common/state.c, meta-server/gnocatan-meta-server.c,
	server/gnocatan-server.c, server/meta.c: Changed net_free to NULLify
	the session, changed the meta-server connection dialog, fixed bug
	#717982, added meta-server redirections without port-number.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* AUTHORS: Added my name.
	* Makefile.am: Fixed make distcheck bug.
	* po/de.po, po/es.po, po/gnocatan.pot: Updated.

2003-10-12  Bas Wijnen <b.wijnen@phys.rug.nl>
	* ai/client.c, client/client.c: Fixed version conflict bug.